# kursa4_4_skypro

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: api.py  utils.py  vacancy.py  worker.py
tests/: conftest.py  test_api.py  test_vacancy.py
