[tool.poetry]
name = "kursa4-4-skypro"
version = "0.1.0"
description = ""
authors = ["git_rtk <17_ufo_RB@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pick = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
